# residuum

./: .dockerignore  .gitignore  BACKLOG.md  CLAUDE.md  COMPARATIVE-ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  background-tasks-audit.md  background-tasks-design.md  build.rs  deny.toml  design-philosophy.md  ironclaw-design.md  memory-search-design.md  notes.md  para-context-design.md  personal-agent-design.md  projects-context-design.md  rustfmt.toml
.githooks/: commit-msg  install.sh  post-commit  pre-commit  pre-push
.github/workflows/: ci.yml  release.yml  test-docker-hub.yml
assets/: channels.example.toml  config.example.toml  mcp.example.json  providers.example.toml
assets/web/: app.js  chat.js  index.html  mcp-catalog.json  models.js  settings.js  setup.js  style.css
assets/workspace-bootstrap/: AGENTS.md  ALERTS.md  BOOTSTRAP.md  ENVIRONMENT.md  HEARTBEAT.yml  MEMORY.md  PRESENCE.toml  SOUL.md  USER.md
audit/: 2026-03-17-code-review.md
bundle/: Info.plist  install-app.sh
docker/: Dockerfile  Dockerfile.release  docker-compose.yml
docs/: CLAUDE.md  background-tasks-design.md  config-restructuring-plan.md  design-philosophy.md  feedback-submission-plan.md  hub-architecture-design.md  idle-system-design.md  io-routing-design.md  ironclaw-design.md  memory-search-design.md  migration-bus-architecture.md  migration-config-restructuring.md  multi-agent-setup.md  notification-routing-design.md  openclaw-migration-design.md  personal-agent-design.md  plugin-system-design.md  projects-context-design.md  research-browser-automation.md  residuum-design.md
docs/mac/: design.md  plan.md  slash-commands-design.md  slash-commands-plan.md
docs/systems-usage/: README.md  background-tasks.md  heartbeats.md  inbox.md  memory.md  notifications.md  projects.md  scheduled-actions.md  skills.md
mac/: project.yml
mac/Residuum/: Info.plist
mac/Residuum.xcodeproj/: project.pbxproj
mac/ResiduumChat.xcodeproj/: project.pbxproj
mac/ResiduumTests/: AgentRegistryTests.swift  ProtocolTests.swift  SlashCommandTests.swift
reference-mats/: config-restructuring-plan.md
scripts/: README.md  apply-audits.sh  audit-modules.sh  backfill_idx.py  loc.sh
scripts/prompts/: clean-audit.md  clean.md  error-handling.md  logging.md  test-quality.md  wonk-check.md
src/: config.rs  daemon.rs  error.rs  lib.rs  main.rs  spawn.rs  time.rs  update.rs
src/a2a/: client.rs  mod.rs  registry.rs  server.rs  types.rs
src/actions/: mod.rs  store.rs  types.rs
src/agent/: agent.rs  context.rs  core.rs  interrupt.rs  mod.rs  recent_messages.rs  session.rs  turn.rs
src/agent_registry/: commands.rs  mod.rs  paths.rs  registry.rs
src/background/: README.md  bridge.rs  mod.rs  script.rs  spawn_context.rs  spawner.rs  subagent.rs  types.rs
src/bus/: broker.rs  endpoint.rs  events.rs  handle.rs  mod.rs  registry.rs  supervision.rs  topics.rs  types.rs
src/channels/: attachment.rs  chunking.rs  cli.rs  discord.rs  mod.rs  null.rs  presence.rs  types.rs  webhook.rs  websocket.rs
src/cli/: colors.rs  commands.rs  indicator.rs  mod.rs  render.rs
src/commands/: bug_report.rs  connect.rs  feedback.rs  logs.rs  mod.rs  secret.rs  serve.rs  setup.rs  stop.rs  tracing_cmd.rs  update.rs
src/config/: CLAUDE.md  bootstrap.rs  constants.rs  deserialize.rs  load.rs  mod.rs  provider.rs  resolve.rs  secrets.rs  types.rs  wizard.rs
src/cron/: executor.rs  mod.rs  scheduler.rs  store.rs  types.rs
src/gateway/: actions.rs  display.rs  file_server.rs  helpers.rs  idle.rs  memory.rs  mod.rs  protocol.rs  reload.rs  server.rs  setup.rs  types.rs  watcher.rs  ws.rs
src/inbox/: mod.rs
src/interfaces/: attachment.rs  chunking.rs  mod.rs  types.rs  webhook.rs  websocket.rs
src/mcp/: client.rs  mod.rs  registry.rs
src/memory/: chunk_extractor.rs  daily_log.rs  episode_store.rs  log_store.rs  mod.rs  (+10 more)
tests/: background_integration.rs  daemon_integration.rs  feedback_submit_integration.rs  file_attachment_integration.rs  gateway_integration.rs  inbox_integration.rs  macos_notifications.rs  mcp_integration.rs  memory_integration.rs  proactivity_integration.rs  projects_integration.rs  skills_integration.rs  smoke.rs  ts_export.rs
web/: .prettierrc  AESTHETIC.md  CLAUDE.md  CONTRIBUTING.md  eslint.config.js  index.html  mock-server.ts  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
(+309 files in other folders)
