[package]
name = "residuum"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "signal", "io-std", "io-util", "sync", "time"] }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
async-trait = "0.1"
rand = "0.8"
dirs = "5"
dotenvy = "0.15"
shellexpand = "3"
aes-gcm-siv = "0.11"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tantivy = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }
rmcp = { version = "0.16", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
serde_yml = "0.0"
tokio-util = { version = "0.7", features = ["rt"] }
nix = { version = "0.29", default-features = false, features = ["signal", "process"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI
rustyline = "15"
owo-colors = { version = "4", features = ["supports-colors"] }
termimad = "0.30"
rpassword = "7"

# WebSocket gateway + web UI
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
rust-embed = "8"
mime_guess = "2"
iana-time-zone = "0.1"

# Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "http", "model", "rustls_backend"] }

# Telegram
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
wiremock = "0.6"

# Lint configuration
#
# These rules are intentionally strict. This project is primarily developed
# and maintained by AI coding agents, and agents will take every shortcut
# that isn't explicitly denied. Warnings get ignored; only hard errors
# change behavior. The strictness here is a substitute for the discipline
# a human developer would bring naturally.
#
# Human contributors: the pre-commit hooks enforce everything, so you'll
# know immediately if something needs fixing.

[lints.rust]
# deny rather than forbid so sqlite-vec FFI registration can use a targeted
# #[expect(unsafe_code)] — forbid cannot be overridden at the item level.
unsafe_code = "deny"

[lints.clippy]
# Pedantic baseline. Kept at warn (not deny) because new clippy versions
# add lints to this group — deny would break builds on toolchain upgrades
# with no code changes. Individual lints below override where needed.
pedantic = { level = "warn", priority = -1 }

# --- Error handling: no shortcuts, no silent failures ---
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
get_unwrap = "deny"
map_err_ignore = "deny"
let_underscore_must_use = "deny"

# --- Panic prevention beyond unwrap/expect ---
indexing_slicing = "deny"
string_slice = "deny"

# --- Prevent incomplete/debug code from shipping ---
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

# --- Controlled exit points (only main.rs may call process::exit) ---
exit = "deny"

# --- Documentation and API discipline ---
missing_errors_doc = "deny"
missing_panics_doc = "deny"
must_use_candidate = "deny"

# --- Assertion quality ---
missing_assert_message = "deny"

# --- Lint suppression hygiene ---
# Every #[allow] must use #[expect] instead (warns when suppression is stale)
allow_attributes = "deny"
# Every suppression must explain why
allow_attributes_without_reason = "deny"

# --- Code quality enforcement ---
format_push_string = "deny"
redundant_type_annotations = "deny"
needless_raw_strings = "deny"
error_impl_error = "deny"
tests_outside_test_module = "deny"
empty_structs_with_brackets = "deny"
rest_pat_in_fully_bound_structs = "deny"
verbose_file_reads = "deny"
clone_on_ref_ptr = "deny"
multiple_inherent_impl = "deny"
same_name_method = "deny"
unseparated_literal_suffix = "deny"
if_then_some_else_none = "deny"
shadow_unrelated = "deny"
wildcard_enum_match_arm = "deny"

# --- Antipatterns ---
rc_buffer = "deny"
rc_mutex = "deny"

# --- Keep relaxed (stylistic) ---
module_name_repetitions = "allow"
